<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ericliu.billshare.EvenDivisionActivity$PlaceholderFragment" >

        <TextView
            android:id="@+id/tvCalculationTitle"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_row="0"
            android:text="@string/even_division_calculation" />

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/payment_name" />

        <EditText
            android:id="@+id/etPaymentName"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:ems="10"
            android:imeOptions="actionDone" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_column="0"
            android:layout_marginBottom="25dp"
            android:layout_row="2"
            android:text="@string/description"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:ems="10"
            android:imeOptions="actionDone" />

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:text="@string/number_of_selected_members" />

        <TextView
            android:id="@+id/tvMemberSelected"
            android:layout_column="2"
            android:layout_marginLeft="10dp"
            android:layout_row="3"
            android:hint="0" />

        <Button
            android:id="@+id/btSelectMember"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginBottom="15dp"
            android:layout_row="4"
            android:text="@string/select_members" />

        <TextView
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:text="@string/number_of_selected_bills" />

        <TextView
            android:id="@+id/tvBillSelected"
            android:layout_column="2"
            android:layout_marginLeft="10dp"
            android:layout_row="5"
            android:hint="0" />

        <Button
            android:id="@+id/btSelectBills"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="7"
            android:text="@string/select_bills" />

        <Button
            android:id="@+id/btCalculate"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginTop="40dp"
            android:layout_row="8"
            android:text="@string/calculate" />
    </GridLayout>

</ScrollView>